@@ -1,14 +1,12 @@
-#	$NetBSD: Makefile,v 1.5 1999/03/13 23:17:46 lukem Exp $
+#	$NetBSD: Makefile,v 1.6 2001/12/12 00:07:47 tv Exp $
 
-LIB=	common
-SRCS=	allow.c board.c check.c fancy.c init.c odds.c one.c save.c subs.c \
-	table.c
+LIB=		common
+SRCS=		allow.c board.c check.c fancy.c init.c odds.c \
+		one.c save.c subs.c table.c
 
-MKLINT=	no
-MKPIC=	no
-MKPROFILE=no
-
-# only needed during build
-libinstall::
+NOLINKLIB=	# defined
+NOLINT=		# defined
+NOPIC=		# defined
+NOPROFILE=	# defined
 
 .include <bsd.lib.mk>
