@@ -1,8 +1,8 @@
-#	$NetBSD: Makefile,v 1.9 1999/02/13 02:54:20 lukem Exp $
+#	$NetBSD: Makefile,v 1.10 2001/12/12 00:07:47 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-PROG=	teachgammon
-SRCS=	data.c teach.c ttext1.c ttext2.c tutor.c
-MKMAN=	no
+PROG=		teachgammon
+SRCS=		data.c teach.c ttext1.c ttext2.c tutor.c
+NOMAN=		# defined
 
 .include <bsd.prog.mk>
