@@ -1,8 +1,8 @@
-#	$NetBSD: Makefile,v 1.10 2000/04/14 04:12:18 simonb Exp $
+#	$NetBSD: Makefile,v 1.11 2001/12/12 00:07:47 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 6/11/93
 
 HOSTPROG=	mkdict
 HOST_CPPFLAGS+=	-I${.CURDIR}/../boggle
-MKMAN=		no
+NOMAN=		# defined
 
 .include <bsd.hostprog.mk>
