@@ -1,8 +1,8 @@
-#	$NetBSD: Makefile,v 1.8 2000/04/14 04:12:19 simonb Exp $
+#	$NetBSD: Makefile,v 1.9 2001/12/12 00:07:48 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 6/11/93
 
 HOSTPROG=	mkindex
 HOST_CPPFLAGS+=	-I${.CURDIR}/../boggle
-MKMAN=		no
+NOMAN=		# defined
 
 .include <bsd.hostprog.mk>
