@@ -1,10 +1,10 @@
-#	$NetBSD: Makefile,v 1.5 1999/02/13 02:54:21 lukem Exp $
+#	$NetBSD: Makefile,v 1.6 2001/12/12 00:07:48 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-PROG=	cfscores
-CPPFLAGS+=-I${.CURDIR}/../canfield
-MKMAN=	no
-HIDEGAME=hidegame
+PROG=		cfscores
+CPPFLAGS+=	-I${.CURDIR}/../canfield
+NOMAN=		# defined
+HIDEGAME=	hidegame
 
 .include "../../Makefile.inc"
 .include <bsd.prog.mk>
