@@ -5,6 +5,10 @@ _ / /|   // __/ / /_ / , | __/ // / ,/
  /_/ |__/_\__/__\__//___/__\__//___'
 		-- Greywolf
 %
+- What's up?
+- All the NetBSD servers, of course..
+		-- Gavan Fantom
+%
 A _Real_ Operating System for _Real_ Hackers.
 		-- Greywolf
 %
@@ -150,6 +154,9 @@ NetBSD - We're not in canvas anymore, toto
 %
 NetBSD - where do you want to go Tuesday?
 		-- Julian Assange
+%
+NetBSD - Will even run on i386
+		-- Brian Hechinger
 %
 NetBSD - your basement or mine?
 		-- Julian Assange
@@ -523,3 +530,4 @@ Young or old; cutting edge or yesterday's NeWS, NetBSD is the UNIX for you.
 It can be a hulking monster in your basement, or fit in the palm
 of your hand.
 		-- Richard Rauch
+%
