@@ -1,9 +1,9 @@
-#	$NetBSD: Makefile,v 1.4 1999/02/13 02:54:21 lukem Exp $
+#	$NetBSD: Makefile,v 1.5 2001/12/12 00:07:48 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-PROG=	morse
-MKMAN=	no
-HIDEGAME=hidegame
+PROG=		morse
+NOMAN=		# defined
+HIDEGAME=	hidegame
 
 .include <bsd.prog.mk>
 
