@@ -1,4 +1,4 @@
-.\"	$NetBSD: number.6,v 1.5 1997/10/10 16:41:37 lukem Exp $
+.\"	$NetBSD: number.6,v 1.6 2001/12/20 20:10:35 soren Exp $
 .\"
 .\" Copyright (c) 1989, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -41,7 +41,8 @@
 .Nd convert Arabic numerals to English
 .Sh SYNOPSIS
 .Nm
-.Op #
+.Op Fl l
+.Op Ar number ...
 .Sh DESCRIPTION
 The
 .Nm
