@@ -1,10 +1,10 @@
-#	$NetBSD: Makefile,v 1.4 1999/02/13 02:54:22 lukem Exp $
+#	$NetBSD: Makefile,v 1.5 2001/12/12 00:07:49 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-PROG=	primes
-SRCS=	pattern.c pr_tbl.c primes.c
-MKMAN=	no
-DPADD=	${LIBM}
-LDADD=	-lm
+PROG=		primes
+SRCS=		pattern.c pr_tbl.c primes.c
+NOMAN=		# defined
+DPADD=		${LIBM}
+LDADD=		-lm
 
 .include <bsd.prog.mk>
