@@ -1,10 +1,10 @@
-#	$NetBSD: Makefile,v 1.5 1999/02/13 02:54:22 lukem Exp $
+#	$NetBSD: Makefile,v 1.6 2001/12/12 00:07:49 tv Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-PROG=	snscore
-CPPFLAGS+=-I${.CURDIR}/../snake
-MKMAN=	no
-HIDEGAME=hidegame
+PROG=		snscore
+CPPFLAGS+=	-I${.CURDIR}/../snake
+NOMAN=		# defined
+HIDEGAME=	hidegame
 
 .include "../../Makefile.inc"
 .include <bsd.prog.mk>
